--- a/paper/references.bib
+++ b/paper/references.bib
@@ -68,6 +68,25 @@
   publisher={Office of Naval Research, Department of the Navy}
 }
 
+@article{hgs,
+	author = {Harrold, M. Jean and Gupta, Rajiv and Soffa, Mary Lou},
+	title = {A Methodology for Controlling the Size of a Test Suite},
+	year = {1993},
+	issue_date = {July 1993},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	volume = {2},
+	number = {3},
+	issn = {1049-331X},
+	url = {https://doi.org/10.1145/152388.152391},
+	doi = {10.1145/152388.152391},
+	journal = {ACM Trans. Softw. Eng. Methodol.},
+	month = jul,
+	pages = {270–285},
+	numpages = {16},
+	keywords = {software engineering, test suite reduction, regression testing, hitting set, software maintenance}
+}
+
 @inproceedings{Royce:1987:MDL:41765.41801,
 	author = {Royce, W. W.},
 	title = {Managing the Development of Large Software Systems: Concepts and Techniques},
@@ -369,6 +388,15 @@
 	Maintenance and Evolution (ICSME), 2019},
 	Doi = {10.1109/icsme.2019.00044},
 }
+
+@INPROCEEDINGS{6676952,
+	author={D. {Marijan} and A. {Gotlieb} and S. {Sen}},
+	booktitle={2013 IEEE International Conference on Software Maintenance},
+	title={Test Case Prioritization for Continuous Regression Testing: An Industrial Case Study},
+	year={2013},
+	volume={},
+	number={},
+	pages={540-543},}
 
 @inproceedings{10.1145/1146238.1146240,
 	author = {Walcott, Kristen R. and Soffa, Mary Lou and Kapfhammer, Gregory M. and Roos, Robert S.},
