--- a/paper/related-work.tex
+++ b/paper/related-work.tex
@@ -9,6 +9,4 @@ In the previous chapter I have stressed the paramount importance of periodically
 
 \input{related-work/approaches.tex}
 \input{related-work/algorithms.tex}
-
-\section{Existing implementations}
-- OpenClover (enkel Java) heeft hier misschien support voor
+\input{related-work/existing-implementations.tex}
