--- a/paper/acknowledgments.tex
+++ b/paper/acknowledgments.tex
@@ -1,3 +1,5 @@
+% !TeX root = thesis.tex
+
 \chapter*{Acknowledgements}
 
 Completing this thesis would not have been possible without the help and support of many people, some of which I want to thank personally.\\
