--- a/paper/related-work/approaches/tcs.tex
+++ b/paper/related-work/approaches/tcs.tex
@@ -1,7 +1,7 @@
 % !TeX root = ../../thesis.tex
 
 \subsection{\tcs{}}
-The second algorithm closely resembles the previous one. Instead of determining the minimal hitting set of the test suite in order to permanently remove tests, this algorithm has a notion of context. Prior to the execution of the tests, the algorithm performs a \emph{white-box static analysis} of the codebase to identify which parts have been changed. Subsequently, only the tests regarding modified parts are executed, making the selection temporary and modification-aware \cite{10.1002/stv.430}. Rothermel and Harrold define this formally in \autoref{def:tcs}.
+The second algorithm closely resembles the previous one. Instead of determining the minimal hitting set of the test suite in order to permanently remove tests, this algorithm has a notion of context. Prior to the execution of the tests, the algorithm performs a \emph{white-box static analysis} of the codebase to identify which parts have been changed. Subsequently, only the tests regarding modified parts are executed, making the selection temporary (\autoref{fig:tcs}) and modification-aware \cite{10.1002/stv.430}. Rothermel and Harrold define this formally in \autoref{def:tcs}.
 
 \begin{definition}[\tcs{}]
 \label{def:tcs}
@@ -14,3 +14,10 @@ The second algorithm closely resembles the previous one. Instead of determining 
 
 \noindent \tcs{} aims to find a subset $T' \subseteq T$ that is used to test $P'$. 
 \end{definition}
+
+\begin{figure}[htbp!]
+	\centering
+	\includegraphics[width=0.45\textwidth]{assets/placeholder.pdf}
+	\caption{\tcs{}}
+	\label{fig:tcs}
+\end{figure}
