--- a/.latex-common/preamble.tex
+++ b/.latex-common/preamble.tex
@@ -8,7 +8,7 @@
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{algorithm}
-\usepackage{algpseudocode}
+\usepackage[noend]{algpseudocode}
 \usepackage{biblatex}
 \usepackage{caption}
 \usepackage{changepage}
