--- a/paper/related-work/approaches/tcp.tex
+++ b/paper/related-work/approaches/tcp.tex
@@ -12,7 +12,7 @@ Where the previous algorithms both attempted to execute as few tests as possible
 	\item $f: PT \mapsto \mathbb{R}$ a function from a subset to a real number, this function is used to compare sequences of tests to find the optimal permutation.
 \end{itemize}
 
-\noindent \tcp{} finds a $T' \in PT$ such that $\forall T'' \in PT : f(T') \ge f(T'') \Rightarrow (T'' \ne T')$ 
+\noindent \tcp{} finds a permutation $T' \in PT$ such that $\forall T'' \in PT : f(T') \ge f(T'') \Rightarrow (T'' \ne T')$ 
 \end{definition}
 
 \begin{figure}[htbp!]
