--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -20,6 +20,8 @@
 \newpage
 \tableofcontents
 \newpage
+\input{abbreviations.tex}
+\newpage
 \input{introduction.tex}
 \newpage
 \input{software-engineering.tex}
