--- a/paper/related-work/algorithms/greedy.tex
+++ b/paper/related-work/algorithms/greedy.tex
@@ -10,7 +10,11 @@ The first algorithm is a \emph{greedy} heuristic, which was originally designed 
 \caption{Greedy algorithm for \tsm{}}
 \label{alg:tsm-greedy}
 \begin{algorithmic}[1]
-	\State {\bfseries Input:} Set $TS$ of all test cases, set $C$ of all source code lines that are covered by any $t \in TS$ and $TL_t$ the set of all lines are covered by test case $t \in TS$.
+	\State {\bfseries Input:} Set $TS$ of all test cases,
+	
+	Set $C$ of all source code lines that are covered by any $t \in TS$,
+	
+	$TL_t$ the set of all lines are covered by test case $t \in TS$.
 	\State {\bfseries Output:} Subset $RS \subseteq TS$ of tests to execute.
 	\State $RS \gets \emptyset$
 	\While{$C \neq \emptyset$}
