--- a/paper/related-work/algorithms.tex
+++ b/paper/related-work/algorithms.tex
@@ -24,6 +24,9 @@ In \autoref{ssec:tsm} the relation was explained between applying Test Suite Min
 For a finite set $S$, the cardinality $|S|$ is defined as the number of elements in $S$. In case of potential confusion, the cardinality of $S$ can also be denoted as $Card(S)$.
 \end{definition}
 
+\newpage
 \input{related-work/algorithms/greedy.tex}
+\newpage
 \input{related-work/algorithms/hgs.tex}
+\newpage
 \input{related-work/algorithms/rocket.tex}
