--- a/paper/related-work.tex
+++ b/paper/related-work.tex
@@ -5,8 +5,10 @@ In the previous chapter, the paramount importance of frequently integrating one'
 
 \noindent Fortunately, multiple developers and researchers have found some techniques that can be used to address the scalability issues of growing test suites. The techniques currently known to literature can be classified in three categories. Developers can either apply \emph{\tsm{}}, \emph{\tcs{}} or \emph{\tcp{}} \cite{evaluationoftestsuiteminimization}. All three techniques are applicable to any test suite, however there is a trade-off to be made. Depending on which technique is chosen, it will either have a major impact on the duration of the test suite execution in exchange for a reduced test coverage level, or it will result in a higher test adequacy.\\
 
-\noindent In the following sections, the details of these three approaches will be discussed and accompanying algorithms will be provided. Since the approaches share common ideas, the algorithms can (albeit with minor modifications) be reused across all approaches. The final section will investigate the integration of these techniques and algorithms in existing prominent software testing frameworks.
+\noindent In the following sections, the details of these three approaches will be discussed and accompanying algorithms will be provided. Since the approaches share common ideas, the algorithms can (albeit with minor modifications) be applied to all approaches. The final section will investigate the adoption and integration of these techniques and algorithms in existing prominent software testing frameworks.
 
 \input{related-work/approaches.tex}
+\newpage
 \input{related-work/algorithms.tex}
-\input{related-work/existing-implementations.tex}
+\newpage
+\input{related-work/adoption.tex}
