--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -12,6 +12,7 @@
 \newcommand{\tsm}{Test Suite Minimisation}
 \newcommand{\tcp}{Test Case Prioritisation}
 \newcommand{\tcs}{Test Case Selection}
+\newcommand{\junit}{JUnit}
 
 \begin{document}
 \input{../.latex-common/titlepage.tex}
@@ -30,9 +31,9 @@
 \newpage
 \input{velocity.tex}
 \newpage
-\input{evaluation.tex}
-\newpage
 \input{other-ways.tex}
+\newpage
+\input{evaluation.tex}
 \newpage
 \input{conclusion.tex}
 \newpage
