--- a/paper/related-work/adoption/openclover.tex
+++ b/paper/related-work/adoption/openclover.tex
@@ -1,7 +1,7 @@
 % !TeX root = ../../thesis.tex
 
 \subsection{OpenClover}
-OpenClover\footnote{\url{https://openclover.org}} is a code coverage framework for Java and Groovy projects. The framework was created by Atlassian and open-sourced in 2017. It profiles itself as ``the most sophisticated code coverage tool'', by extracting useful metrics from the coverage results and by providing features that can optimise the test suite. Among these features are powerful integrations with development software and prominent Continuous Integration services. Furthermore, OpenClover offers the automatic analysis of the coverage results to detect relations between the application source code and the test cases. This feature allows OpenClover to predict which test cases will have been affected, given a set of modifications to the source code. Subsequently, these predictions can be interpreted to implement \tsm{}. This results in a reduced test suite execution time.
+OpenClover\footnote{\url{https://openclover.org}} is a code coverage framework for Java and Groovy projects. The framework was created by Atlassian and open-sourced in 2017. It profiles itself as ``the most sophisticated code coverage tool'', by extracting useful metrics from the coverage results and by providing features that can optimise the test suite. Among these features are powerful integrations with development software and prominent Continuous Integration services. Furthermore, OpenClover offers the automatic analysis of the coverage results to detect relations between the application source code and the test cases. This feature allows OpenClover to predict which test cases will have been affected, given a set of modifications to the source code. Subsequently, these predictions can be interpreted to implement \tcs{}. This results in a reduced test suite execution time.
 
 \begin{figure}[htbp!]
 	\centering
