--- a/paper/related-work/approaches/tcp.tex
+++ b/paper/related-work/approaches/tcp.tex
@@ -17,7 +17,7 @@ Where the previous algorithms both attempted to execute as few tests as possible
 
 \begin{figure}[htbp!]
 	\centering
-	\includegraphics[width=0.45\textwidth]{assets/placeholder.pdf}
+	\includegraphics[width=0.6\textwidth]{assets/approach-tcp.pdf}
 	\caption{\tcp{}}
 	\label{fig:tcp}
 \end{figure}
