--- a/paper/related-work/approaches/tcs.tex
+++ b/paper/related-work/approaches/tcs.tex
@@ -17,7 +17,7 @@ The second algorithm closely resembles the previous one. Instead of determining 
 
 \begin{figure}[htbp!]
 	\centering
-	\includegraphics[width=0.45\textwidth]{assets/placeholder.pdf}
+	\includegraphics[width=0.6\textwidth]{assets/approach-tcs.pdf}
 	\caption{\tcs{}}
 	\label{fig:tcs}
 \end{figure}
