--- a/paper/related-work/approaches/tsm.tex
+++ b/paper/related-work/approaches/tsm.tex
@@ -19,7 +19,7 @@
 
 \begin{figure}[htbp!]
 	\centering
-	\includegraphics[width=0.45\textwidth]{assets/placeholder.pdf}
+	\includegraphics[width=0.6\textwidth]{assets/approach-tsm.pdf}
 	\caption{\tsm{}}
 	\label{fig:tsm}
 \end{figure}
