--- a/paper/software-engineering/agile-software-development/continuous-integration/github-actions.tex
+++ b/paper/software-engineering/agile-software-development/continuous-integration/github-actions.tex
@@ -1,7 +1,7 @@
 % !TeX root = ../../../thesis.tex
 
 \subsubsection{GitHub Actions}
-Following the successful beta of GitHub Actions which had started in August 2019, GitHub launched its own Continuous Integration system later that year in November\footnote{\url{https://github.blog/2019-08-08-github-actions-now-supports-ci-cd/}}. GitHub Actions executes builds in the cloud on servers owned by GitHub and can therefore only be used in conjunction with a GitHub repository, support for GitHub Enterprise repositories is not yet available. The developers can define builds using \emph{workflows} that can be configured to run both on Linux, Windows as well as OSX hosts. Private repositories are allowed a fixed amount of free build minutes per month, while builds of public repositories are always free of charges \cite{githubactions}. Similar to Jenkins, GitHub Actions can be extended with custom plugins. These plugins can be created using either a Docker container, or in native JavaScript, which allows faster execution \cite{aboutgithubactions}. It should be noted however that due to the recent nature of this system, not many plugins have been created yet.
+Following the successful beta of GitHub Actions which had started in August 2019, GitHub launched its own \CI{} system later that year in November\footnote{\url{https://github.blog/2019-08-08-github-actions-now-supports-ci-cd/}}. GitHub Actions executes builds in the cloud on servers owned by GitHub and can therefore only be used in conjunction with a GitHub repository, support for GitHub Enterprise repositories is not yet available. The developers can define builds using \emph{workflows} that can be configured to run both on Linux, Windows as well as OSX hosts. Private repositories are allowed a fixed amount of free build minutes per month, while builds of public repositories are always free of charges \cite{githubactions}. Similar to Jenkins, GitHub Actions can be extended with custom plugins. These plugins can be created using either a Docker container, or in native JavaScript, which allows faster execution \cite{aboutgithubactions}. It should be noted however that due to the recent nature of this system, not many plugins have been created yet.
 
 \begin{figure}[htbp!]
 	\centering
