--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -9,10 +9,12 @@
 \addbibresource{references.bib}
 
 % Macro's
+\newcommand{\CI}{Continuous Integration}
+\newcommand{\junit}{JUnit}
 \newcommand{\tsm}{Test Suite Minimisation}
 \newcommand{\tcp}{Test Case Prioritisation}
 \newcommand{\tcs}{Test Case Selection}
-\newcommand{\junit}{JUnit}
+\newcommand{\velocity}{VeloCIty}
 
 \begin{document}
 \input{../.latex-common/titlepage.tex}
