--- a/paper/velocity.tex
+++ b/paper/velocity.tex
@@ -1,41 +1,11 @@
 % !TeX root = thesis.tex
 
-\chapter{Proposed framework: VeloCIty}
+\chapter{Proposed framework: \velocity{}}
 \label{chap:velocity}
-(TODO)
 
-- Implementatiedetails van algoritmes
+The implementation part of this thesis consists of a framework and a set of tools, tailored at optimising the test suite as well as providing accompanying metrics and insights. The framework was named \emph{\velocity{}} to reflect its purpose of enhancing the speed at which \CI{} is practised. This paper will now proceed by outlining the design goals of the framework. Afterwards, a high-level schematic overview of the implemented architecture will be provided, followed by a more in-depth explanation of every pipeline step. In the final section of this chapter, the \emph{Alpha} algorithm will be presented. This prioritisation algorithm was constructed by combining various ideas of aforementioned algorithms.
 
-- Uitwerking: nog onder voorbehoud (2e semester)
-
-- Metapredictor: Voer alle algoritmes eens uit en rangschik ze volgens hoe goed ze het voorspeld hebben
-
-- Scoringsmechanisme: Nog bepalen
-
-- Junit: https://www.baeldung.com/junit-5-test-order
-
-\subsection{Architectuur}
-- Commit
-- POST /commit
-	data: parent commit hash, huidige commit hash
-	result: volgorde van tests
-- voer tests uit in gegeven volgorde
-- POST /result
-	data: huidige commit hash, gefaalde tests
-	
-\subsection{Junit-reorder}
-- Orde vastleggen in yaml files (plaats voorbeeld)
-- Out of the box support om tests binnen eenzelfde klasse in volgorde uit te voeren, maar niet class-wide support
-- Na elke uitvoering van een test wordt een nieuwe processor aangemaakt met een filter op de methodnaam, dit heeft als nadeel dat hergebruiken van initialisaties niet gaat. Misschien hier nog iets op vinden
-- Parallelliseren momenteel niet gesupport, geen idee hoe dat zou werken met een volgorde (kan niet gewoon verdelen in volgorde want stel dat 1 test heel lang duurt dan is die volgorde niet meer juist)
-- Shortcuts genomen wegens problemen met gradle (shaded jars) -> bepaalde JUnit functionaliteit weggegooid (vooral @Ignored annotatie)
-
-Na elke uitvoering van test wordt coverage data bijgehouden om later te analyseren door test processor hack (maak hier zo'n mooi ding van).
-
-Coverage data formaat optimaliseren zodat xmlfile niet gigantisch groot wordt -> done
-
-Algoritmes aanpassen zodat branches ook rekening mee gehouden wordt (stel dat test A lijn 5 covert en test B ook, maar lijn 5 is een if-statement met 2 condities en test A triggert enkel de eerste conditie, dan zal test B met lagere prioriteit worden uitgevoerd of zelfs niet omdat de lijn al gecoverd is) -> eventueel via mutator die branches naar lijnen uitsplitst in zowel tests als source
-
-Andere programmeertalen kunnen op zelfde manier door tests sequentieel uit te voeren
-
-%<https://rubygems.org/gems/reverse_coverage/
+\input{velocity/design-goals.tex}
+\input{velocity/high-level-overview.tex}
+\input{velocity/pipeline.tex}
+\input{velocity/alpha.tex}
