--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -2,3 +2,10 @@
 
 (TODO)
 - TCP combieren met ideeen uit TSM om zo bepaalde tests te skippen -> Test Suite Optimisation
+
+- Onderscheid tussen unit en integration tests -> gefaalde unit test geeft waarschijnlijk aanleiding tot gefaalde integratie test dus gebruik dit om te ordenen
+
+- Parallelliseren?
+
+- Machine Learning en Lineair programmeren als metapredictor?
+
