--- a/paper/velocity/pipeline.tex
+++ b/paper/velocity/pipeline.tex
@@ -1,54 +1,56 @@
 % !TeX root = ../thesis.tex
 
 \section{Pipeline}
- for interpreting the changed 
+(TODO zoom in op elke stap uit bovenstaande figuur)
+
+% for interpreting the changed 
 
 
 
-design goal 2 geimplementeerd via REST interface (leg rest uit)
+%design goal 2 geimplementeerd via REST interface (leg rest uit)
 
 
-This chapter will start by providing a high-level overview of the implemented architecture, followed by 
+%This chapter will start by providing a high-level overview of the implemented architecture, followed by 
 
-to optimise the test suite, as well as provide useful insights. The framework was named \emph{VeloCIty} to reflect its purpose of enhancing the speed of \CI{} systems. This chapter will start by 
-
-
+%to optimise the test suite, as well as provide useful insights. The framework was named \emph{VeloCIty} to reflect its purpose of enhancing the speed of \CI{} systems. This chapter will start by 
 
 
-(TODO)
 
-- Implementatiedetails van algoritmes
 
-- Uitwerking: nog onder voorbehoud (2e semester)
+%(TODO)
 
-- Metapredictor: Voer alle algoritmes eens uit en rangschik ze volgens hoe goed ze het voorspeld hebben
+%- Implementatiedetails van algoritmes
 
-- Scoringsmechanisme: Nog bepalen
+%- Uitwerking: nog onder voorbehoud (2e semester)
 
-- Junit: https://www.baeldung.com/junit-5-test-order
+%- Metapredictor: Voer alle algoritmes eens uit en rangschik ze volgens hoe goed ze het voorspeld hebben
 
-\subsection{Architectuur}
-- Commit
-- POST /commit
-data: parent commit hash, huidige commit hash
-result: volgorde van tests
-- voer tests uit in gegeven volgorde
-- POST /result
-data: huidige commit hash, gefaalde tests
+%- Scoringsmechanisme: Nog bepalen
 
-\subsection{Junit-reorder}
-- Orde vastleggen in yaml files (plaats voorbeeld)
-- Out of the box support om tests binnen eenzelfde klasse in volgorde uit te voeren, maar niet class-wide support
-- Na elke uitvoering van een test wordt een nieuwe processor aangemaakt met een filter op de methodnaam, dit heeft als nadeel dat hergebruiken van initialisaties niet gaat. Misschien hier nog iets op vinden
-- Parallelliseren momenteel niet gesupport, geen idee hoe dat zou werken met een volgorde (kan niet gewoon verdelen in volgorde want stel dat 1 test heel lang duurt dan is die volgorde niet meer juist)
-- Shortcuts genomen wegens problemen met gradle (shaded jars) -> bepaalde JUnit functionaliteit weggegooid (vooral @Ignored annotatie)
+%- Junit: https://www.baeldung.com/junit-5-test-order
 
-Na elke uitvoering van test wordt coverage data bijgehouden om later te analyseren door test processor hack (maak hier zo'n mooi ding van).
+%\subsection{Architectuur}
+%- Commit
+%- POST /commit
+%data: parent commit hash, huidige commit hash
+%result: volgorde van tests
+%- voer tests uit in gegeven volgorde
+%- POST /result
+%data: huidige commit hash, gefaalde tests
 
-Coverage data formaat optimaliseren zodat xmlfile niet gigantisch groot wordt -> done
+%\subsection{Junit-reorder}
+%- Orde vastleggen in yaml files (plaats voorbeeld)
+%- Out of the box support om tests binnen eenzelfde klasse in volgorde uit te voeren, maar niet class-wide support
+%- Na elke uitvoering van een test wordt een nieuwe processor aangemaakt met een filter op de methodnaam, dit heeft als nadeel dat hergebruiken van initialisaties niet gaat. Misschien hier nog iets op vinden
+%- Parallelliseren momenteel niet gesupport, geen idee hoe dat zou werken met een volgorde (kan niet gewoon verdelen in volgorde want stel dat 1 test heel lang duurt dan is die volgorde niet meer juist)
+%- Shortcuts genomen wegens problemen met gradle (shaded jars) -> bepaalde JUnit functionaliteit weggegooid (vooral @Ignored annotatie)
 
-Algoritmes aanpassen zodat branches ook rekening mee gehouden wordt (stel dat test A lijn 5 covert en test B ook, maar lijn 5 is een if-statement met 2 condities en test A triggert enkel de eerste conditie, dan zal test B met lagere prioriteit worden uitgevoerd of zelfs niet omdat de lijn al gecoverd is) -> eventueel via mutator die branches naar lijnen uitsplitst in zowel tests als source
+%Na elke uitvoering van test wordt coverage data bijgehouden om later te analyseren door test processor hack (maak hier zo'n mooi ding van).
 
-Andere programmeertalen kunnen op zelfde manier door tests sequentieel uit te voeren
+%Coverage data formaat optimaliseren zodat xmlfile niet gigantisch groot wordt -> done
+
+%Algoritmes aanpassen zodat branches ook rekening mee gehouden wordt (stel dat test A lijn 5 covert en test B ook, maar lijn 5 is een if-statement met 2 condities en test A triggert enkel de eerste conditie, dan zal test B met lagere prioriteit worden uitgevoerd of zelfs niet omdat de lijn al gecoverd is) -> eventueel via mutator die branches naar lijnen uitsplitst in zowel tests als source
+
+%Andere programmeertalen kunnen op zelfde manier door tests sequentieel uit te voeren
 
 %<https://rubygems.org/gems/reverse_coverage/
