--- a/paper/velocity/alpha.tex
+++ b/paper/velocity/alpha.tex
@@ -27,27 +27,51 @@ avg(\{D_{ti} \vert i \in [1 \dots k]\}) & \text{otherwise}
 \right\}
 \]
 
-\noindent (TODO vermeld hier ergens bij dat eerste stap afgeleid is uit ROCKET)\\
-\noindent (TODO vermeld ergens dat test groups beschouwd worden ipv individuele test cases zoals in HGS)\\
+\noindent Next, the algorithm executes every affected test case that has also failed at least once in its three previous executions. This reflects the behaviour of a developer attempting to resolve the bug that caused the test case to fail. Specifically executing \emph{affected} failing test cases first is required in case multiple test cases are failing and the developer is resolving these one by one, an idea which was extracted from the ROCKET algorithm (\autoref{ssec:alg-rocket}). In case there are multiple affected failing test cases, the test cases are prioritised by increasing execution time. After every selected test case, $C$ is updated by subtracting the code lines that have been covered by at least one of these test cases.\\
 
-\noindent Next, the algorithm executes every affected test case that has also failed at least once in its three previous executions. This reflects the behaviour of a developer attempting to resolve the bug that caused the test case to fail. Specifically executing \emph{affected} failing test cases first is required in case multiple test cases are failing and the developer is solving resolving these one by one. In case there are multiple affected failing test cases, the test cases are prioritised according to ascending execution time. $C$ is updated after every considered test case.\\
+\noindent Afterwards, the same operation is repeated for every failed but unaffected test case, likewise ordered by increasing execution time. Where the previous step helps developers to get fast feedback about whether or not the specific failing test case they were working on has been resolved, this step ensures that other failing test cases are not forgotten and are executed early in the run as well. Similar to the previous step, $C$ is again updated after every prioritised test case.\\
 
-\noindent Afterwards, the same step is repeated for every failed, but unaffected test case, again ordered by ascending execution time. Where the previous step helps developers to get fast feedback about whether or not the specific failing test case they were working on has been resolved, this step ensures that other failing test cases are not forgotten and are executed early in the run as well. After every prioritised test case, $C$ is updated by subtracting the code lines that are covered by at least one of these test cases.\\
+\noindent Research (TODO reference) has indicated that on average, only a small fraction (TODO PERCENTAGE \%) of all test runs will contain failed tests, resulting in the previous two steps not being executed at all. Therefore, the most time should be dedicated to executing test cases that cover affected code lines. More specifically, the next step of the algorithm executes every affected test case, sorted by decreasing cardinality of the intersection between $C$ and the lines which are covered by the test case. Conforming to the prior two steps, $C$ is also updated to reflect the selected test case. As a consequence of these updates, the cardinalities of these intersections change after every update, which will ultimately lead to affected tests not strictly requiring to be executed. This idea has been adopted from the Greedy algorithm \autoref{ssec:alg-greedy}.\\
 
-(TODO)
+\noindent In the penultimate step, the previous operation is repeated in an identical fashion for the remaining test cases, similarly ordered by the cardinality of the intersection with the remaining uncovered lines in $C$.\\
 
-\begin{itemize}
-	\item Research (zie travistorrent in result sectie) heeft aangetoond dat maar bepaald percentage (reken uit; vrij laag) van test cases faalt $\Rightarrow$ In meeste situaties zal deze stap het meeste tijd in beslag nemen: voer alle affected test cases uit die niet gefaald zijn (want gefaalde zijn hierboven al uitgevoerd geweest), op volgorde van de resterende intersectie met C aangezien dat geupdate is geweest $\Rightarrow$ mogelijks schiet er niet eens meer een affected test case over ~ idee uit greedy algoritme
-	
-	\item Daarna, voer alle test cases uit die lijnen coveren die nog steeds niet gecoverd zijn op volgorde van grootste intersectie met C.
-	
-	\item Daarna, voer al de rest uit, als er nog iets is. $\Rightarrow$ Deze tests zijn eigenlijk redundant
-\end{itemize}
+\noindent Finally, the algorithm selects every test case which had not yet been prioritised. Notice that these test cases do not contribute to the test coverage, as every test case that would incur additional coverage would have been prioritised already in the previous step. Subsequently, these test cases are actually redundant and are therefore candidates for removal by \tsm{}. However, since this is a prioritisation algorithm, these tests will still be executed and prioritised by increasing execution time.
 
 \begin{algorithm}[h!]
-	\caption{Alpha algorithm for \tcp{}}
-	\label{alg:alpha}
-	\begin{algorithmic}[1]
-		\State TODO
-	\end{algorithmic}
+\caption{Alpha algorithm for \tcp{}}
+\label{alg:alpha}
+\begin{algorithmic}[1]
+	\State {\bfseries Input:} Set $TS = \{T_1, \dots, T_n\}$ of all test cases,
+	
+	Execution time $E$ of every test case,
+	
+	Failure status $FS$ for each test case over the previous $m$ successive iterations.
+	\State {\bfseries Output:} Priority of test cases $P$.
+	\State $P \gets array[1 \dots n]$ \Comment{initially $0$}
+	\State $MF \gets array[1 \dots m]$
+	\ForAll{$i \in 1 \dots m$}
+	\State $MF[i] \gets array[1 \dots n]$
+	\ForAll{$j \in 1 \dots n$}
+	\If{test $T_j$ failed in run $(current - i)$} $MF[i][j] \gets -1$
+	\Else{} $MF[i][j] \gets 1$
+	\EndIf
+	\EndFor
+	\EndFor
+	\ForAll{$j \in 1 \dots n$}
+	\ForAll{$i \in 1 \dots m$}
+	\If{$i = 1$} $P[j] \gets P[j] + (MF[i][j] * 0.7)$
+	\ElsIf{$i = 2$} $P[j] \gets P[j] + (MF[i][j] * 0.2)$
+	\Else{} $P[j] + (MF[i][j] * 0.1)$
+	\EndIf
+	\EndFor
+	\EndFor
+	\State $Q \gets \{P[j] \vert j \in 1 \dots n\}$ \Comment{distinct priorities}
+	\State $G \gets array[1 \dots Card(Q)]$ \Comment{initially empty sets}
+	\ForAll{$j \in 1 \dots n$}
+	\State $p \gets P[j]$
+	\State $G[p] \gets G[p] \cup \{j\}$
+	\EndFor
+	\State Sort every group in $G$ based on ascending execution time in $E$.
+	\State Sort $P$ according to which group it belongs and its position within that group.
+\end{algorithmic}
 \end{algorithm}
